Add allocation booking method endpoint
