# src/api/v1/reference/models/allocation-booking-method.js
@@ -1,0 +1,15 @@
+class AllocationBookingMethodOption {
+  constructor (method) {
+    this.method = method
+  }
+
+  static fromEntity (entity) {
+    return new AllocationBookingMethodOption(
+      entity.method
+    )
+  }
+}
+
+export {
+  AllocationBookingMethodOption
+}
